fixed alignment of members in large screen width

--- a/src/styles/members.css
+++ b/src/styles/members.css
@@ -19,10 +19,15 @@
 
 .right1 {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  /* flex-direction: column;
   text-align: center;
   align-items: center;
-  margin-left: auto;
+  margin-left: auto; */
+  /* display: grid;
+  grid-template-columns: repeat(auto-fill);
+  grid-gap: 20px;
+  background-color: red; */
 }
 
 .right1 {
@@ -48,17 +53,10 @@
   padding: 10px;
 }
 
-.people-c1 {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding-left: 0;
-  width: 100%;
-}
-
-.person-card li {
+.person-card {
   margin-bottom: 15px;
-  width: 40%;
+  /* width: 40%; */
+  background-color: aqua;
 }
 
 .person-card p {
